=== dev-ank changes ===

--- a/languages/ru_RU/LC_MESSAGES/sportorg.po
+++ b/languages/ru_RU/LC_MESSAGES/sportorg.po
@@ -1308,6 +1308,9 @@ msgstr "Люди"
 msgid "Duplicate card numbers (card numbers are reset)"
 msgstr "Дублирующиеся чипы (номера чипов обнулены)"
 
+msgid "Delete duplicate card from old person"
+msgstr "Удалён дублирующийся чип у старого участника"
+
 msgid "Bib header not found"
 msgstr "Cтолбец Номер не найден"
 
@@ -1691,6 +1694,9 @@ msgstr "ДИСКВ."
 
 msgid "laps"
 msgstr "кр."
+
+msgid "Missing penalty lap"
+msgstr "Пропущен штрафной круг"
 
 msgid "contain"
 msgstr "содержит"
