feat: relays in all-russian competition

--- a/languages/ru_RU/LC_MESSAGES/sportorg.po
+++ b/languages/ru_RU/LC_MESSAGES/sportorg.po
@@ -237,6 +237,57 @@ msgstr "Тип"
 msgid "Best team placing"
 msgstr "Международный принцип"
 
+msgid "All-Russian competition"
+msgstr "Всероссйиские соревнования"
+
+msgid ""
+"Sequence of results in regular competitions:\n"
+"1) Relay teams with results (including teams from different organizations, out of competition teams)\n"
+"2) Incomplete teams with results\n"
+"3) Complete disqualified teams\n"
+"4) Incomplete disqualified teams\n"
+"\n"
+"Sequence of results in all-Russian competitions:\n"
+"1) Relay teams, all participants from the same organization\n"
+"2) Relay teams, participants from different organizations\n"
+"3) Relay teams, out of competition\n"
+"4) Incomplete teams with results\n"
+"5) Complete disqualified teams\n"
+"6) Incomplete disqualified teams"
+msgstr ""
+"Последовательность результатов на обычных соревнованиях:\n"
+"1) Эстафетные команды, имеющие результат (включая из разных коллективов, в/к)\n"
+"2) Неполные команды, имеющие результат\n"
+"3) Полные дисквалифицированные команды\n"
+"4) Неполные дисквалифицированные команды\n"
+"\n"
+"Последовательность результатов на всероссийских соревнованиях:\n"
+"1) Эстафетные команды, все участники из одного коллектива\n"
+"2) Эстафетные команды, участники из разных коллективов\n"
+"3) Эстафетные команды, вне конкурса\n"
+"4) Неполные команды, имеющие результат\n"
+"5) Полные дисквалифицированные команды\n"
+"6) Неполные дисквалифицированные команды"
+
+msgid ""
+"Sequence of results taking into account the international principle:\n"
+"1) Relay teams, all participants from the same organization, one team per organization\n"
+"2) Relay teams, all participants from one organization, other teams from organizations\n"
+"3) Relay teams, participants from different organizations\n"
+"4) Relay teams, out of competition\n"
+"5) Incomplete teams with results\n"
+"6) Complete disqualified teams\n"
+"7) Incomplete disqualified teams"
+msgstr ""
+"Последовательность результатов с учётом международного принципа:\n"
+"1) Эстафетные команды, все участники из одного коллектива, по одной команде от коллектива\n"
+"2) Эстафетные команды, все участники из одного коллектива, остальные команды от коллективов\n"
+"3) Эстафетные команды, участники из разных коллективов\n"
+"4) Эстафетные команды, вне конкурса\n"
+"5) Неполные команды, имеющие результат\n"
+"6) Полные дисквалифицированные команды\n"
+"7) Неполные дисквалифицированные команды"
+
 msgid "Rank calculation"
 msgstr "Выполнение разрядов"
 
